# sdl-wrapper

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: SDL++.h
source/: SDL++ (Globals).cpp  SDL++.cpp  asset.cpp  audio.cpp  colors.cpp  font.cpp  globals.cpp  keys.cpp  mouse.cpp  rect.cpp  render.cpp  text.cpp  texture.cpp
